# spin-sdk

./: .gitignore  DEV_README.md  NOTES.md  README.md  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: npm-publish.yml
circuits/: Cargo.toml
circuits/game_logic/: Cargo.toml  Makefile  dry-run.sh  template.env
config/: repo.ts
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: ABI.json  App.tsx  main.tsx  proof.tsx  web3.tsx
gameplay/: Cargo.toml  README.md
gameplay/cli/: Cargo.toml
guide/: 1_PRELIMINARY_KNOWLEDGE.md  2_INTRODUCTION.md  3_TERMINOLOGIES.md  4_HOW_SPIN_WORKS.md  5_TECHNICAL_GUIDE.md  5_TECHNICAL_GUIDE_HACKATHON.md  ABOUT_PERFORMANCE.md  GUIDE.md  HACKATHON_GUIDE.md  INTRODUCTION.md  REFERENCES.md  TODOs.md
misc/: Makefile  Makefile_assemblyscript  Makefile_rust  wasm_import_template_commonjs.js  wasm_import_template_esm.js
onchain/: Makefile  README.md  hardhat.config.ts  package-lock.json  package.json
script/: add-shebang.js
sdk/: Makefile
sdk/gameplay/export/: Cargo.toml
sdk/gameplay/export/spinjs/: package-lock.json  package.json  tsconfig.json
sdk/gameplay/export/spinjs/src/: GamePlay.ts  Proof.ts  Spin.ts  index.ts  zkwasm-service-helper.d.ts
sdk/gameplay/export/src/: export.rs  lib.rs  zkmain.rs
sdk/gameplay/test/provable_game_logic/: Cargo.toml
sdk/gameplay/test/provable_game_logic/src/: definition.rs
src/: blockchain.ts  comment.ts  config.ts  index.ts  logger.ts  zkwasm.ts
tests/: README.md  comment.ts  index.ts  test.ts
(+221 files in other folders)
